[package]
name = "cursive-async-view"
version = "0.1.3-alpha.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>", "Johannes Wünsche <johannes.wuensche97@gmail.com>"]
edition = "2018"
description = "A loading-screen wrapper for gyscos/cursive views"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["cursive-views", "cursive", "loading", "progress", "terminal"]
repository = "https://github.com/deinstapel/cursive-async-view"
documentation = "https://docs.rs/cursive-async-view"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.12.0"
log = "0.4.6"
interpolation = "0.2.0"
crossbeam = "0.7.2"
num = "0.2.0"

[badges]
travis-ci = { repository = "deinstapel/cursive-async-view" }
