[package]
name = "cursive-async-view"
version = "0.8.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>", "Johannes Wünsche <johannes.wuensche97@gmail.com>"]
edition = "2018"
description = "A loading-screen wrapper for gyscos/cursive views"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["cursive-views", "cursive", "loading", "progress", "terminal"]
repository = "https://github.com/deinstapel/cursive-async-view"
documentation = "https://docs.rs/cursive-async-view"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_core = "0.4"
log = "0.4"
interpolation = "0.2"
crossbeam = "0.8"
num = "0.4"
send_wrapper = "0.5"
lazy_static = "1.4"
doc-comment = "0.3"

[dev-dependencies]
cursive = "0.21.0"
